# try-astronomy

./: .gitignore  .tool-versions  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  kind.yaml  main.py  pyproject.toml
.claude/: settings.json
.gemini/: settings.json
.roo/: mcp.json
.serena/: project.yml
MultimodalUniverse/: README.md
MultimodalUniverse/gaia/notebooks/: 01_3d_star_map.ipynb  data_validation.ipynb
MultimodalUniverse/galaxy10_decals/notebooks/: 02_simple_cnn.ipynb  memo.md
auto_area_estimation/: best_linear_regression_model.pth  ceers_columns.csv  ceers_getting_start.ipynb  ceers_params.json  ceers_training.ipynb  ceers_visualize.ipynb  custom_dataset.py  main.ipynb  model_serve.py  previous_best_r2.txt  pyproject.toml
extreme_unraveling-the-universe/chapter1/: exercise2.ipynb  section1-3.ipynb  section1-4.ipynb  section1-6.ipynb  section1.ipynb  section1_detailed_solutions.ipynb  section2_gravitational_problems.ipynb
extreme_unraveling-the-universe/chapter1/section1/: problem_1_1_fullerene.ipynb  problem_1_2_atomic_structure.ipynb  problem_1_3_hydrogen_density.ipynb  section1.ipynb  (+4 more)
kubernetes/: helmfile.yaml
kubernetes/values/: coder-db.yaml  coder.yaml  ingress-nginx.yaml  jupyterhub.yaml
photometric-redshift-estimation/: best_linear_regression_model_tune.pth  best_loss.txt  ceers_getting_start.ipynb  custom_dataset.py  data_preprocessing.py  download_dataset.py  linear_regression_model.pth  main.py  mps_info.py  multimodal_universe_getting_start.ipynb  pyproject.toml
playground/: hubble_expansion_spectral_shift_demo.py  keplers_third_law_binary.py  magnitude_difference.py  magnitude_to_brightness_ratio.py  mass_luminosity_relation.py  pyproject.toml  radius_luminosity_temperature_relation.py  satellite_orbit_insertion.py  satellite_orbit_insertion_extended.py  schwarzschild_radius_example.py  specific_impulse_to_velocity.py  universal_gravitation_example.py
scripts/: README.md  cat-hosts-on-windows.sh  kind-run-lb.sh
scripts/pdf_converter/: README.md  pdf_converter.py  requirements.txt  setup.sh
(+9 files in other folders)
