[project]
name = "try-astronomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "datasets==2.21.0",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jax>=0.8.1",
    "matplotlib>=3.10.8",
    "mmu",
    "pillow>=12.0.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
mmu = { git = "https://github.com/MultimodalUniverse/MultimodalUniverse.git" }
