[project]
name = "photometric-redshift-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "datasets>=3.5.0",
    "h5py>=3.13.0",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ray[tune]>=2.44.1",
    "scikit-learn>=1.6.1",
    "tables>=3.10.1",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
