[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [
    {name = "tozastation",email = "tozastation@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy (>=7.1.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
